@@ -4047,6 +4047,8 @@ enum : uint16_t
 
     STR_SPEED_TOO_HIGH = 6627,
 
+    STR_CAN_ONLY_BE_PLACED_ON_PATH_EDGES = 6628,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
